--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/IsabekovTemirlan/instagram-chatbot#readme",
   "dependencies": {
+    "axios": "^1.7.3",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2"
   }
 }
